--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prettier"
   ],
   "dependencies": {
+    "agenda": "^4.2.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -62,6 +63,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
